--- a/Objetos/objetos.html
+++ b/Objetos/objetos.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <script src="objetos.js"></script>
-</head>
-<body>
-    <input type="button" value="Prueba 1" onclick="probarAtributos();" />
-    <input type="button" value="Productos" onclick="crearProductos();" />
-    <input type="button" value="Prueba 2" onclick="modificarAtributos();" />
-    <input type="button" value="Prueba 3" onclick="crearCliente();" />
-<input type="button" value="Prueba SALDO" onclick="probarIncrementarSaldo();" />
-<input type="button" value="Prueba MAYOR" onclick="probarDeterminarMayor();" />
-</body>
+  </head>
+  <body>
+    <input type="button" value="PRUEBA 1" onclick="probarAtributos();" />
+    <input type="button" value="PRUEBA 2" onclick="crearProducto();" />
+    <input
+      type="button"
+      value="MODIFICAR ATRIBUTOS"
+      onclick="modificarAtributos();"
+    />
+    <input type="button" value="CREAR CLIENTE" onclick="crearCliente();" />
+    <input type="button" value="3" onclick="probarIncrementoSaldo();" />
+    <input type="button" value="4" onclick="probarDeterminarMyor();" />
+  </body>
 </html>
