--- a/Objetos/clientes.html
+++ b/Objetos/clientes.html
@@ -5,9 +5,9 @@
     <script src="utilitarios.js"></script>
   </head>
   <body>
-    <h5>CEDULA</h5>
+    <h5>CEDULAS</h5>
     <input type="text" id="txtCedula" />
-    <h5>NOMBRE</h5>
+    <h5>NOMBRES</h5>
     <input type="text" id="txtNombre" />
     <h5>Edad</h5>
     <input type="text" id="txtEdad" />
@@ -17,7 +17,7 @@
 
     <div id="tablaClientes"></div>
 
-    <h5>INGRESE LA CEDULA</h5>
+    <h5>INGRESE LA CEDULAS</h5>
     <input type="text" id="txtcedulaBusqueda" />
     <input type="button" value="BUSCAR" onclick="ejecutarBusqueda();" />
   </body>
