--- a/roles/roles.html
+++ b/roles/roles.html
@@ -10,13 +10,13 @@
 <body onload="mostrarOpcionRol()">
     <div class="menu">
         <div class="contenedorBoton">
-            <input type="button" value="EMPLEADO" class="estiloBoton" onclick="mostrarOpcionEmpleado()" />
+            <input type="button" value="EMPLEADO" class="estiloBoton" onclick="mostrarOpcionEmpleados()" />
         </div>
         <div class="contenedorBoton">
-            <input type="button" value="ROL" class="estiloBoton" onclick="mostrarOpcionRol()"/>
+            <input type="button" value="ROL" class="estiloBoton" onclick="mostrarOpcionRoles()"/>
         </div>
         <div class="contenedorBoton">
-            <input type="button" value="RESUMEN" class="estiloBoton" onclick="mostrarOpcionResumen()" />
+            <input type="button" value="RESUMEN" class="estiloBoton" onclick="mostrarOpcionResumenes()" />
         </div>
     </div>
 
@@ -77,7 +77,7 @@
                 </div>
                 <div class="botones">
                     <div class="contenedorBoton">
-                        <input type="button" value="NUEVO" class="estiloBoton" onclick="ejecutarNuevo();" />
+                        <input type="button" value="NUEVO" class="estiloBoton" onclick="ejecutarNuevos();" />
                     </div>
                     <div class="contenedorBoton">
                         <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardar" onclick="guardar();" />
