--- a/roles/roles.html
+++ b/roles/roles.html
@@ -80,10 +80,10 @@
                         <input type="button" value="NUEVO" class="estiloBoton" onclick="ejecutarNuevos();" />
                     </div>
                     <div class="contenedorBoton">
-                        <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardar" onclick="guardar();" />
+                        <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardarInofrmacion" onclick="guardar();" />
                     </div>
                     <div class="contenedorBoton">
-                        <input type="button" value="LIMPIAR" class="estiloBoton" onclick="limpiar();" />
+                        <input type="button" value="LIMPIAR CAMPOS" class="estiloBoton" onclick="limpiar();" />
                 </div>
     </div>
                 <div id="tablaEmpleados" class="areaTabla">
