--- a/roles/roles.html
+++ b/roles/roles.html
@@ -171,7 +171,7 @@
             </div>
             <div class="botones">
                 <div class="contenedorBoton">
-                    <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardarRol" onclick="guardarRoles()" />
+                    <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardarRoles" onclick="guardarRoles()" />
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
             <!-- NUEVO CAMPO PARA TOTAL NÓMINA -->
             <div class="ingresoDatos">
                 <div class="tituloCampo">
-                    TOTAL NÓMINA
+                    TOTAL DE NÓMINA 
                 </div>
                 <div>
                     <div class="info" id="infoTotalNomina">0.0</div>
