--- a/roles/roles.html
+++ b/roles/roles.html
@@ -10,10 +10,10 @@
 <body onload="mostrarOpcionRol()">
     <div class="menu">
         <div class="contenedorBoton">
-            <input type="button" value="EMPLEADO" class="estiloBoton" onclick="mostrarOpcionEmpleados()" />
+            <input type="button" value="EMPLEADOS" class="estiloBoton" onclick="mostrarOpcionEmpleados()" />
         </div>
         <div class="contenedorBoton">
-            <input type="button" value="ROL" class="estiloBoton" onclick="mostrarOpcionRoles()"/>
+            <input type="button" value="ROLES" class="estiloBoton" onclick="mostrarOpcionRoles()"/>
         </div>
         <div class="contenedorBoton">
             <input type="button" value="RESUMEN" class="estiloBoton" onclick="mostrarOpcionResumenes()" />
